test/test_cases/invalid/semanticErr/variables/basicTypeErr13.wacc
# attempting to access non-array type as array

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = 1 ;
	println i[2] ;
	int e = 2 ;
	println e[2][1] ;
	println e[i]
end
